jwt and authorization fix