@@ -5,19 +5,29 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.cors.CorsConfigurationSource;
+import java.util.stream.Stream;
+import java.util.Objects;
 
 import java.util.Arrays;
 import java.util.List;
+import org.springframework.beans.factory.annotation.Value;
 
 @Configuration
+
+
 public class CorsConfig {
+    @Value("${cors.allowed-origins}")
+    private String allowedOriginsString;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
+
         
-        
-        configuration.setAllowedOrigins(List.of("http://localhost:5173")); 
+    
+      System.out.println("Allowed Origins: " + allowedOriginsString); // Debugging line to check the origins
+   
+        configuration.setAllowedOrigins(Arrays.asList(allowedOriginsString.split(","))); 
         
         
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
